rasn-compiler-tests/tests/snapshots/simple_types__integer_distinguished_values.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: "Test-Int ::= INTEGER {\n        first(0),\n        second(1),\n        third (2)\n    } (0..2)"
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod test_module {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    # [rasn (delegate , identifier = "Test-Int" , value ("0..=2") , named_values ("first" = 0 , "second" = 1 , "third" = 2))]
    pub struct TestInt(pub u8);
}
