rasn-compiler-tests/tests/snapshots/simple_types__integer_named_values_unbounded.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: "PUKKeyReferenceValue ::= INTEGER {\n        pukAppl1(1),\n        pukAppl2(2),\n        pukAppl3(3),\n        pukAppl4(4),\n        pukAppl5(5),\n        pukAppl6(6),\n        pukAppl7(7),\n        pukAppl8(8),\n        secondPUKAppl1(129),\n        secondPUKAppl2(130),\n        secondPUKAppl3(131),\n        secondPUKAppl4(132),\n        secondPUKAppl5(133),\n        secondPUKAppl6(134),\n        secondPUKAppl7(135),\n        secondPUKAppl8(136)\n    }"
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod test_module {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    # [rasn (delegate , named_values ("pukAppl1" = 1 , "pukAppl2" = 2 , "pukAppl3" = 3 , "pukAppl4" = 4 , "pukAppl5" = 5 , "pukAppl6" = 6 , "pukAppl7" = 7 , "pukAppl8" = 8 , "secondPUKAppl1" = 129 , "secondPUKAppl2" = 130 , "secondPUKAppl3" = 131 , "secondPUKAppl4" = 132 , "secondPUKAppl5" = 133 , "secondPUKAppl6" = 134 , "secondPUKAppl7" = 135 , "secondPUKAppl8" = 136))]
    pub struct PUKKeyReferenceValue(pub Integer);
}
