rasn-compiler-tests/tests/snapshots/simple_types__integer_range_ext_const.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: " Test-Int ::= INTEGER (4..6,...)\n        test-int-val Test-Int ::= 5"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "Test-Int" , value ("4..=6" , extensible))] pub struct TestInt (pub Integer) ; pub static TEST_INT_VAL : LazyLock < TestInt > = LazyLock :: new (|| TestInt (Integer :: from (5i128))) ; }
