rasn-compiler-tests/tests/snapshots/simple_types__integer_value_constrained.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: "test-int INTEGER(0..255) ::= 4"
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; pub const TEST_INT : u8 = 4 ; }
